# spatial-statistics-final-project

./: .gitignore  Kriging_test_small_N.ipynb  Plot_settings.py  README.md  ScatterplotLayer.html  hello.py  introduction.md  pyproject.toml
.ipynb_checkpoints/: ESS_Final_Project_JosephowitzFlorian-checkpoint.ipynb
