[project]
name = "spatial-statistics-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.6.3",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "geoviews>=1.14.0",
    "gstools[rust]>=1.6.1",
    "holoviews>=1.20.1",
    "hvplot>=0.11.2",
    "jupyterlab>=4.3.5",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pyarrow>=19.0.1",
    "pydeck>=0.9.1",
    "pykrige>=1.7.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xarray>=2025.1.2",
]
